--- a/2018-1-15/management/views/store.ejs
+++ b/2018-1-15/management/views/store.ejs
@@ -46,8 +46,8 @@
 					<a class="hover" href="javascript:;">商品管理</a>
 					<span><b></b></span>
 					<ul>
-						<li class="goodlist">商品列表</li>
-						<li class="addgood">添加新商品</li>
+						<li class="goodlist"><a href="/product" target="content" style="background: none;color: #d7d7d7;line-height: 30px;">商品列表</a></li>
+						<li class="addgood"><a href="/addgood" target="content" style="background: none;color: #d7d7d7;line-height: 30px;">添加新商品</a></li>
 						<li>商品分类</li>
 						<li>用户评论</li>
 						<li>商品品牌</li>
@@ -246,7 +246,7 @@
 			</ul>
 		</div>
 		<div id="right">
-			<iframe id="content" name="content" src="http://localhost:8080/addgood"></iframe>
+			<iframe id="content" name="content" src="http://localhost:8080/product"></iframe>
 		</div>
 		
 	</body>
