--- a/2018-1-15/management/views/store.ejs
+++ b/2018-1-15/management/views/store.ejs
@@ -246,7 +246,7 @@
 			</ul>
 		</div>
 		<div id="right">
-			<iframe id="content" name="content" src="http://localhost:8080/product"></iframe>
+			<iframe id="content" name="content" src="http://localhost/product"></iframe>
 		</div>
 		
 	</body>
